--- a/app/src/main/res/layout/languages_list.xml
+++ b/app/src/main/res/layout/languages_list.xml
@@ -4,71 +4,98 @@
     android:id="@+id/lngLayoutActivity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:background="@drawable/bg_nothing_rounded_ripple"
-    android:orientation="vertical"
     android:clickable="true"
+    android:focusable="true"
     android:gravity="center"
-    android:focusable="true">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/flagView"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
-            app:shapeAppearanceOverlay="@style/roundedCorners"
-            android:scaleType="centerCrop"
+            android:layout_margin="@dimen/less_padding"
             android:padding="@dimen/less_padding"
-            android:layout_margin="@dimen/less_padding" />
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/roundedCorners" />
 
         <TextView
             android:id="@+id/languageName"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:text="@string/textview"
-            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
+            android:gravity="center_vertical"
+            android:paddingVertical="@dimen/fab_padding"
+            android:text="@string/textview"
             android:textColor="@color/black"
-            android:paddingVertical="@dimen/fab_padding" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textViewPremium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_main_less_rounded"
-            android:paddingVertical="4dp"
-            android:textColor="@color/black"
-            android:visibility="gone"
             android:backgroundTint="@color/accent"
             android:paddingHorizontal="@dimen/padding"
-            android:text="@string/premium" />
+            android:paddingVertical="4dp"
+            android:text="@string/premium"
+            android:textColor="@color/black"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/ivSelected"
-            android:layout_width="@dimen/icon_size"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/icon_size"
-            android:scaleType="center"
-            android:paddingHorizontal="@dimen/less_padding"
             android:background="@drawable/bg_nothing_rounded_ripple"
+            android:paddingHorizontal="@dimen/less_padding"
+            android:scaleType="center"
             android:src="@drawable/ic_baseline_done_24"
             android:visibility="invisible"
             app:tint="@color/accent" />
 
-        <ImageView
-            android:id="@+id/btnSpeakTranslation"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:scaleType="center"
-            android:paddingHorizontal="@dimen/less_padding"
-            android:background="@drawable/bg_nothing_rounded_ripple"
-            android:src="@drawable/ic_speak_ic"
-            app:tint="?attr/colorSecondary" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btnSpeakTranslation"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:paddingHorizontal="@dimen/less_padding"
+                android:scaleType="center"
+                android:src="@drawable/ic_speak_ic"
+                app:tint="?attr/colorSecondary" />
+
+            <ImageView
+                android:id="@+id/ivDownloadLanguage"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/icon_size"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:paddingHorizontal="@dimen/less_padding"
+                android:scaleType="center"
+                android:src="@drawable/outline_download_24" />
+
+            <ProgressBar
+                android:id="@+id/pbDownloading"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="32dp"
+                android:layout_height="@dimen/icon_size"
+                android:indeterminateTint="@color/accent"
+                android:paddingHorizontal="@dimen/less_padding"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
