--- a/app/src/main/res/layout/activity_pre_splash_screen.xml
+++ b/app/src/main/res/layout/activity_pre_splash_screen.xml
@@ -59,6 +59,7 @@
             android:layout_marginHorizontal="@dimen/padding"
             android:fontFamily="@font/gilroy_light"
             android:gravity="center"
+            android:visibility="invisible"
             android:maxLines="2"
             android:text="@string/a_translator_is_a_reader_an_interpreter_and_a_creator_all_in_one"
             android:textColor="@color/gray_700"
