--- a/app/src/main/res/layout/suggestions_strip.xml
+++ b/app/src/main/res/layout/suggestions_strip.xml
@@ -15,10 +15,12 @@
         android:soundEffectsEnabled="false">
 
         <LinearLayout
+            android:id="@+id/llTranslation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="@dimen/padding">
+            android:paddingTop="@dimen/padding"
+            android:paddingHorizontal="@dimen/padding">
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
@@ -158,6 +160,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/padding"
             android:orientation="horizontal">
 
             <ImageButton
