--- a/app/src/main/res/layout/activity_pre_splash_screen.xml
+++ b/app/src/main/res/layout/activity_pre_splash_screen.xml
@@ -91,7 +91,7 @@
         android:layout_marginBottom="@dimen/padding_10"
         android:background="@drawable/bg_nothing_rounded_ripple"
         android:transitionName="anim_splash"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bannerFrameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:lottie_autoPlay="true"
@@ -104,8 +104,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_padding"
         android:text="@string/loading_monetization"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bannerFrameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/bannerFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
