--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -18,13 +18,13 @@
             android:id="@+id/logo"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_100sdp"
-            app:srcCompat="@drawable/logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:elevation="@dimen/padding"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="@dimen/fab_padding"
+            android:background="@drawable/bg_main_less_rounded"
+            android:elevation="@dimen/padding"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/bg_main_less_rounded" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo" />
 
         <LinearLayout
             android:id="@+id/llLogo"
@@ -32,8 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding"
             android:gravity="center"
-            app:chainUseRtl="false"
             android:orientation="horizontal"
+            app:chainUseRtl="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/logo">
@@ -53,17 +53,17 @@
             android:id="@+id/tvText1"
             android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/llLogo"
             android:layout_marginHorizontal="@dimen/padding"
             android:fontFamily="@font/gilroy_light"
-            android:maxLines="2"
-            android:textStyle="bold"
             android:gravity="center"
-            android:textSize="@dimen/_12sdp"
+            android:maxLines="2"
             android:text="@string/a_translator_is_a_reader_an_interpreter_and_a_creator_all_in_one"
             android:textColor="@color/gray_400"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/llLogo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -85,84 +85,88 @@
         android:id="@+id/nativeAdFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/padding"
         android:background="@drawable/bg_main_less_rounded"
-        app:layout_constraintTop_toBottomOf="@id/exit_rating"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/tvQuit"
-        android:layout_margin="@dimen/padding"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-
-    <TextView
-        android:id="@+id/tvQuit"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clExit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/quit"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/less_padding"
-        android:gravity="center"
-        android:text="@string/do_you_really_want_to_quit"
-        android:textColor="@color/gray_700"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@id/llBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="20dp" />
-
-    <LinearLayout
-        android:id="@+id/llBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_padding"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/exit_rating">
 
         <TextView
-            android:id="@+id/btnYes"
-            android:layout_width="0dp"
+            android:id="@+id/tvQuit"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_10"
-            android:layout_weight="1"
-            android:background="@drawable/bg_main_less_rounded"
-            android:backgroundTint="?attr/colorSecondary"
-            android:elevation="@dimen/padding_10"
             android:gravity="center"
-            android:padding="@dimen/padding_10"
-            android:text="@string/yes"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/quit"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView5"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/btnNo"
-            android:layout_width="0dp"
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_10"
-            android:layout_marginStart="@dimen/less_padding"
-            android:layout_weight="1"
-            android:background="@drawable/bg_main_less_rounded"
-            android:backgroundTint="@color/accent"
-            android:elevation="@dimen/padding_10"
+            android:layout_marginTop="@dimen/less_padding"
             android:gravity="center"
-            android:padding="@dimen/padding_10"
-            android:text="@string/no"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/do_you_really_want_to_quit"
+            android:textColor="@color/gray_700"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@id/llBtn"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </LinearLayout>
+            tools:layout_editor_absoluteX="20dp" />
 
+        <LinearLayout
+            android:id="@+id/llBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_padding"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:id="@+id/btnYes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_10"
+                android:layout_weight="1"
+                android:background="@drawable/bg_main_less_rounded"
+                android:backgroundTint="?attr/colorSecondary"
+                android:elevation="@dimen/padding_10"
+                android:gravity="center"
+                android:padding="@dimen/padding_10"
+                android:text="@string/yes"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/btnNo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_10"
+                android:layout_marginStart="@dimen/less_padding"
+                android:layout_weight="1"
+                android:background="@drawable/bg_main_less_rounded"
+                android:backgroundTint="@color/accent"
+                android:elevation="@dimen/padding_10"
+                android:gravity="center"
+                android:padding="@dimen/padding_10"
+                android:text="@string/no"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
