--- a/app/src/main/res/layout/admob_small_native_ad_hctr_btn_bottom.xml
+++ b/app/src/main/res/layout/admob_small_native_ad_hctr_btn_bottom.xml
@@ -32,11 +32,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/m_padding"
-            android:layout_marginBottom="@dimen/m_padding"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="@dimen/m_padding"
+            app:layout_constraintEnd_toStartOf="@+id/ad"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bottom">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ad_app_icon"
@@ -85,16 +84,18 @@
             android:id="@+id/bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginHorizontal="@dimen/fab_padding"
+            android:layout_marginVertical="@dimen/padding"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/ad_call_to_action"
                 android:layout_width="@dimen/_100sdp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_rounded"
-                android:layout_marginVertical="@dimen/padding"
                 android:backgroundTint="@color/accent"
                 android:gravity="center"
                 android:paddingVertical="@dimen/padding_10"
