--- a/app/src/main/res/layout/activity_premium_screen.xml
+++ b/app/src/main/res/layout/activity_premium_screen.xml
@@ -4,8 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_splash_screen"
+    android:background="@drawable/bg_in_app"
     tools:context="org.dslul.openboard.translator.pro.PremiumScreenActivity">
+
+    <ImageView
+        android:id="@+id/btnDismiss"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/extra_padding"
+        android:elevation="@dimen/less_padding"
+        android:padding="@dimen/padding"
+        android:src="@drawable/ic_close_btn"
+        app:tint="#707070"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -33,24 +46,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/btnDismiss"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/extra_padding"
-        android:elevation="@dimen/less_padding"
-        android:padding="@dimen/padding"
-        android:src="@drawable/ic_close_btn"
-        app:tint="#707070"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imageView" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animLoading"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tvUpgradeToPremium"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_fileName="anim_in_app.json"  />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/fab_padding"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -67,101 +77,40 @@
                 android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/clOneTimePurchase"
-                    android:layout_width="@dimen/_90sdp"
-                    android:layout_height="@dimen/_100sdp"
-                    android:layout_marginVertical="@dimen/fab_padding"
-                    android:background="@drawable/bg_in_app_item"
-                    android:elevation="@dimen/less_padding"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/clWeekly"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/tvMonthly"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_medium"
-                        android:text="@string/monthly"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_12sdp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/tvMonthlyPrice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="$26"
-                        android:textColor="@color/accent"
-                        android:fontFamily="@font/poppins_regular"
-                        android:textSize="@dimen/_24sdp"
-                        app:layout_constraintBottom_toTopOf="@id/tvMonthlyPer"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvMonthly" />
-
-                    <TextView
-                        android:id="@+id/tvMonthlyPer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_medium"
-                        android:text="@string/pre_month"
-                        android:textColor="@color/gray_7070"
-                        android:textSize="@dimen/_11sdp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clWeekly"
-                    android:layout_width="@dimen/_90sdp"
-                    android:layout_height="@dimen/_100sdp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:elevation="@dimen/less_padding"
+                    android:layout_marginStart="@dimen/fab_padding"
                     android:background="@drawable/bg_in_app_item_selected"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/clYearly"
-                    app:layout_constraintStart_toEndOf="@id/clOneTimePurchase"
+                    app:layout_constraintEnd_toStartOf="@id/clMonthly"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tvWeekly"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="@string/weekly"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12sdp"
+                        android:layout_marginTop="@dimen/fab_padding"
+                        android:textSize="@dimen/_14sdp"
+                        app:layout_constraintBottom_toTopOf="@+id/tvWeeklyPer"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/tvWeeklyPrice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_regular"
-                        android:text="$26"
-                        android:textColor="@color/accent"
-                        android:textSize="@dimen/_24sdp"
-                        app:layout_constraintBottom_toTopOf="@id/tvWeeklyPer"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvWeekly" />
-
-                    <TextView
                         android:id="@+id/tvWeeklyPer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_medium"
-                        android:text="@string/per_week"
+                        android:fontFamily="@font/poppins_regular"
+                        android:text="Standard"
                         android:textColor="@color/gray_7070"
                         android:gravity="center"
+                        android:layout_marginBottom="@dimen/fab_padding"
                         android:textSize="@dimen/_11sdp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -170,48 +119,82 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clMonthly"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/fab_padding"
+                    android:background="@drawable/bg_in_app_item"
+                    android:elevation="@dimen/less_padding"
+                    android:layout_marginHorizontal="@dimen/fab_padding"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/clYearly"
+                    app:layout_constraintStart_toEndOf="@id/clWeekly"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tvMonthly"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:text="@string/monthly"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14sdp"
+                        android:layout_marginTop="@dimen/fab_padding"
+                        app:layout_constraintBottom_toTopOf="@id/tvMonthlyPer"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tvMonthlyPer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="10% Off"
+                        android:textColor="@color/tt_skip_red"
+                        android:layout_marginBottom="@dimen/fab_padding"
+                        android:textSize="@dimen/_11sdp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clYearly"
-                    android:layout_width="@dimen/_90sdp"
-                    android:layout_height="@dimen/_100sdp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:elevation="@dimen/less_padding"
                     android:background="@drawable/bg_in_app_item"
+                    android:layout_marginEnd="@dimen/fab_padding"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/clWeekly"
+                    app:layout_constraintStart_toEndOf="@id/clMonthly"
                     app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
                             android:id="@+id/tvYearly"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_medium"
+                            android:fontFamily="@font/poppins_regular"
                             android:text="@string/yearly"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12sdp"
+                            android:textSize="@dimen/_14sdp"
+                            app:layout_constraintBottom_toTopOf="@id/tvYearlyPer"
+                            android:layout_marginTop="@dimen/fab_padding"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/tvYearlyPrice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
-                            android:text="$26"
-                            android:textColor="@color/accent"
-                            android:textSize="@dimen/_24sdp"
-                            app:layout_constraintBottom_toTopOf="@id/tvYearlyPer"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvYearly" />
 
                         <TextView
                             android:id="@+id/tvYearlyPer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_medium"
-                            android:text="@string/per_year"
-                            android:textColor="@color/gray_7070"
+                            android:text="25% Off"
+                            android:textColor="@color/tt_skip_red"
+                            android:layout_marginBottom="@dimen/fab_padding"
                             android:textSize="@dimen/_10sdp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -219,30 +202,15 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <TextView
-                android:id="@+id/tvNoFreeTrail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding"
-                android:layout_marginTop="@dimen/padding"
-                android:gravity="center"
-                android:text="No Free Trail"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
         </LinearLayout>
 
         <TextView
             android:id="@+id/btnGetPro"
-            android:layout_width="@dimen/_150sdp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/fab_padding"
-            android:background="@drawable/bg_main_less_rounded"
-            android:elevation="@dimen/padding"
-            android:backgroundTint="@color/accent"
+            android:layout_margin="@dimen/fab_padding"
+            android:background="@drawable/bg_btn_in_app"
+            android:elevation="@dimen/less_padding"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center"
             android:paddingHorizontal="@dimen/fab_padding"
@@ -262,13 +230,40 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding"
             android:gravity="center"
-            android:text="@string/you_can_cancel_subscription_any_time"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/poppins_regular"
+            android:text="No Commitment, Cancel Anytime"
+            android:textColor="@color/gray_7070"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintBottom_toTopOf="@id/tvRemindMeLater"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <TextView
+            android:id="@+id/tvShowDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding"
+            android:gravity="center"
+            android:fontFamily="@font/poppins_medium"
+            android:layout_marginEnd="@dimen/fab_padding"
+            android:text="@string/show_details"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tvRemindMeLater" />
+
+        <TextView
+            android:id="@+id/tvRemindMeLater"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding"
+            android:gravity="center"
+            android:fontFamily="@font/poppins_medium"
+            android:text="@string/remind_me_later"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
