--- a/app/src/main/res/layout/activity_app_language_selector.xml
+++ b/app/src/main/res/layout/activity_app_language_selector.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/fab_padding"
-            android:text="@string/languages"
+            android:text="@string/select_app_language"
             android:textColor="@color/white"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold"
@@ -53,7 +53,7 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:tint="@color/white"
+                app:tint="@color/white"
                 android:src="@drawable/ic_arrow_down"
                 android:rotation="270"/>
         </LinearLayout>
