--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -81,15 +81,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clMain" />
 
-    <FrameLayout
-        android:id="@+id/nativeAdFrameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="@dimen/padding"
-        android:background="@drawable/bg_main_less_rounded"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clExit"
         android:layout_width="match_parent"
@@ -137,7 +128,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_main_less_rounded"
                 android:backgroundTint="?attr/colorSecondary"
-                android:elevation="@dimen/padding_10"
+                android:elevation="@dimen/less_padding"
                 android:gravity="center"
                 android:padding="@dimen/padding_10"
                 android:text="@string/yes"
@@ -147,7 +138,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
             <TextView
                 android:id="@+id/btnNo"
                 android:layout_width="0dp"
@@ -157,7 +147,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_main_less_rounded"
                 android:backgroundTint="@color/accent"
-                android:elevation="@dimen/padding_10"
+                android:elevation="@dimen/less_padding"
                 android:gravity="center"
                 android:padding="@dimen/padding_10"
                 android:text="@string/no"
@@ -169,4 +159,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/nativeAdFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/padding"
+        android:background="@drawable/bg_main_less_rounded"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
